--- a/README
+++ b/README
@@ -1,28 +1,26 @@
 Rails Stripe Membership Saas
 ========================
 
-You can use this project as a starting point for a Rails web application. It requires Rails 3 and uses Devise for user management and authentication, CanCan for authorization, Twitter Bootstrap for CSS styling, and Stripe for recurring billing.
+You can use this project as a starting point for a Rails web application. It requires Rails 4.2 and uses Devise for user management and authentication, enum roles for authorization, Twitter Bootstrap for CSS styling, with Payola and Stripe for recurring billings and product sales.
 
-Devise
-http://github.com/plataformatec/devise
+"Devise":http://github.com/plataformatec/devise
 
-CanCan
-https://github.com/ryanb/cancan
+"Twitter Bootstrap":http://twitter.github.com/bootstrap/
 
-Twitter Bootstrap
-http://twitter.github.com/bootstrap/
+"Stripe":https://stripe.com/
 
-Stripe
-https://stripe.com/
+"Payola":https://www.payola.io/
+
+"Enum":http://edgeapi.rubyonrails.org/classes/ActiveRecord/Enum.html
 
 ________________________
 
 For more information, please see the updated README file on GitHub:
 
-https://github.com/railsapps/rails-stripe-membership-saas
+"README":https://github.com/railsapps/rails-stripe-membership-saas
 
 ________________________
 
-MIT License
+h2. MIT License
 
-http://www.opensource.org/licenses/mit-license
+"MIT License":http://www.opensource.org/licenses/mit-license
