--- a/README
+++ b/README
@@ -1,17 +1,15 @@
 Rails Stripe Membership Saas
 ========================
 
-You can use this project as a starting point for a Rails web application. It requires Rails 4.2 and uses Devise for user management and authentication, enum roles for authorization, Twitter Bootstrap for CSS styling, with Payola and Stripe for recurring billings and product sales.
+You can use this project as a starting point for a Rails web application. It requires Rails 4.2 and uses Devise for user management and authentication, Bootstrap for CSS styling, with Payola and Stripe for recurring billing and product sales.
 
 "Devise":http://github.com/plataformatec/devise
 
-"Twitter Bootstrap":http://twitter.github.com/bootstrap/
+"Bootstrap":http://twitter.github.com/bootstrap/
 
 "Stripe":https://stripe.com/
 
 "Payola":https://www.payola.io/
-
-"Enum":http://edgeapi.rubyonrails.org/classes/ActiveRecord/Enum.html
 
 ________________________
 
@@ -20,7 +18,5 @@ For more information, please see the updated README file on GitHub:
 "README":https://github.com/railsapps/rails-stripe-membership-saas
 
 ________________________
-
-h2. MIT License
 
 "MIT License":http://www.opensource.org/licenses/mit-license
