fixed missing semi-colon

--- a/README
+++ b/README
@@ -11,7 +11,7 @@ You can use this project as a starting point for a Rails web application. It req
 
 "Payola":https://www.payola.io/
 
-"Payola"https://www.payola.io/
+"Payola":https://www.payola.io/
 
 "Enum":http://edgeapi.rubyonrails.org/classes/ActiveRecord/Enum.html
 
